--- a/index.html
+++ b/index.html
@@ -137,24 +137,23 @@
           />
         </div>
       </div>
-      <div
-        class="flex flex-col items-center justify-center bg-amber-200 py-15"
-      >
-        <h1 class="font-bold text-5xl mb-10">Drop By for a Bite</h1>
-        <div class="flex flex-col md:flex-row justify-center items-center divide-x  divide-black space-x-10">
-          <div class="px-10">
-            <h3 class="text-3xl mb-4">Address</h3>
-            <p class="text-lg mb-2">1234 Coffee St,</p>
+      <section class="bg-amber-200 py-16 text-center">
+        <h2 class="text-4xl font-bold mb-12">Drop By for a Bite.</h2>
+      
+        <div class="flex justify-center items-start gap-12 divide-x divide-black max-w-4xl mx-auto px-4">
+          <div class="px-15 text-center">
+            <h3 class="text-xl font-semibold mb-2">Address</h3>
+            <p>1234 Coffee St,</p>
             <p>Brewtown, CA 12345</p>
           </div>
-          <div>
-            <h3 class="text-3xl mb-4">Opening Hours</h3>
-            <p class="text-lg mb-2">Mon-Fri: 9am - 6pm</p>
-            <p class="text-lg mb-2">Saturday: 10am - 2pm</p>
-            <p class="text-lg">Sunday: Closed</p>
+          <div class=" text-center">
+            <h3 class="text-xl font-semibold mb-2">Opening Hours</h3>
+            <p>Mon - Fri: 9am - 6pm</p>
+            <p>Saturday: 10am - 2pm</p>
+            <p>Sunday: Closed</p>
           </div>
         </div>
-      </div>
+      </section>
     </main>
   </body>
 </html>
