--- a/index.html
+++ b/index.html
@@ -188,21 +188,21 @@
         />
       </section>
     </main>
-    <footer class="bg-amber-950 text-white py-10 px-6">
+    <footer class="bg-amber-950 text-white py-15 px-6 ">
       <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
         <!-- Newsletter -->
         <div>
-          <h3 class="text-lg font-semibold mb-4">Newsletter</h3>
-          <p class="text-sm mb-2">Subscribe to stay updated.</p>
+          <h3 class="text-2xl font-semibold text-amber-500 mb-4">Newsletter</h3>
+          <p class=" mb-5">Stay up to date with the latest from Mug & Muffins.</p>
           <form class="flex flex-col gap-2">
             <input
               type="email"
               placeholder="Your email"
-              class="px-4 py-2 border border-gray-300 rounded"
+              class="px-4 py-2 border mb-5 border-white"
             />
             <button
               type="submit"
-              class="bg-amber-500 text-white py-2 px-4 rounded hover:bg-amber-600"
+              class="bg-amber-500 text-black py-2 px-4 rounded-lg hover:bg-amber-600"
             >
               Subscribe
             </button>
@@ -211,15 +211,15 @@
 
         <!-- Talk to Us -->
         <div>
-          <h3 class="text-lg font-semibold mb-4">Talk to Us</h3>
-          <p class="text-sm">Email: support@example.com</p>
-          <p class="text-sm">Phone: +123 456 7890</p>
-          <p class="text-sm">Address: 123 Street Name, City</p>
+          <h3 class="text-2xl font-semibold text-amber-500 mb-4">Talk to Us</h3>
+          <p class="mb-3">Email: info@mandm.com</p>
+          <p class="mb-3">Phone: +123 456 7890</p>
+          <p class="">Address: 1234 Coffee St, Brewtown, CA 12345</p>
         </div>
 
         <!-- Social Media -->
         <div>
-          <h3 class="text-lg font-semibold mb-4">Follow Us</h3>
+          <h3 class="text-2xl font-semibold text-amber-500 mb-4">Follow Us</h3>
           <div class="flex space-x-4">
             <a href="#" class="text-2xl hover:text-amber-600"
               ><i class="fab fa-facebook-f"></i
