--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-    <!-- Navbar and hero section -->
+    <!-- Navbar -->
     <div
       class="container min-h-screen relative bg-[url('/assets/hero-section.jpg')] bg-cover bg-center"
     >
@@ -45,6 +45,7 @@
           </li>
         </ul>
       </nav>
+      <!-- Hero Section -->
       <div
         class="flex flex-col items-center justify-center h-screen text-white"
       >
@@ -59,7 +60,7 @@
         </button>
       </div>
     </div>
-    <!-- Main section -->
+    <!-- Product Offerings -->
     <main>
       <!-- First Div -->
       <div class="flex flex-col md:flex-row h-[500px]">
@@ -141,7 +142,7 @@
           />
         </div>
       </div>
-      <!-- Next Section -->
+      <!-- Business Details -->
       <section class="bg-amber-200 py-16 text-amber-950 text-center">
         <h2 class="text-4xl font-bold mb-12">Drop By for a Bite.</h2>
         <div
