--- a/index.html
+++ b/index.html
@@ -223,16 +223,16 @@
         <div>
           <h3 class="text-2xl font-semibold text-amber-500 mb-4">Follow Us</h3>
           <div class="flex space-x-4">
-            <a href="#" class="text-2xl hover:text-amber-600"
+            <a href="" class="text-2xl hover:text-amber-600"
               ><i class="fab fa-facebook-f"></i
             ></a>
-            <a href="#" class="text-2xl hover:text-amber-600"
+            <a href="" class="text-2xl hover:text-amber-600"
               ><i class="fab fa-twitter"></i
             ></a>
-            <a href="#" class="text-2xl hover:text-amber-600"
+            <a href="" class="text-2xl hover:text-amber-600"
               ><i class="fab fa-instagram"></i
             ></a>
-            <a href="#" class="text-2xl hover:text-amber-600"
+            <a href="" class="text-2xl hover:text-amber-600"
               ><i class="fab fa-linkedin"></i
             ></a>
           </div>
